# ExtraLifeHelper

./: .gitmodules  CMakeLists.txt  ExtraLifeDataScraper.cpp  ExtraLifeDataScraper.h  ExtraLifeDonationScraper.cpp  ExtraLifeDonationScraper.h  ExtraLifeGUI.cpp  ExtraLifeGUI.h  LICENSE  README.md  main.cpp  utils.cpp  utils.h
